--- a/public/admin/defaultdashboard.css
+++ b/public/admin/defaultdashboard.css
@@ -34,6 +34,7 @@ body {
     flex-direction: column;
     text-align: center;
     background-color: #f9f9f9;
+    overflow: hidden;
     max-width: 100vw;
     min-height: 100vh;
     line-height: 1.6;
@@ -55,16 +56,27 @@ body .sub-body {
 .dashboard-sub-body > .vertical-navbar {
     width: 260px;
     position: absolute;
-    z-index: 16;
+    z-index: 20;
     left: 0;
     transition: left 0.5s ease;
     height: 100%;
     /* background-color: #f9f9f9; */
 }
 
+.vertical-navbar.active::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    left: 260px;
+    width: 100dvw;
+    z-index: -1;
+    background: #00000094;
+    animation: fade 0.5s ease;
+}
+
 .dashboard-content-title button {
     display: none;        
-    width: 40px;
+    width: 28px;
     height: 35px;        
     border-radius: 10px;
     background: none;
@@ -74,9 +86,9 @@ body .sub-body {
     border: none;
     align-items: center;
     justify-content: center;
-    font-size: 2.4rem;
+    font-size: 2.3rem;
     letter-spacing: 0.1px;
-    padding: 0px 10px;
+    padding: 0px 5px;
 }
 
 .user-details .closeIcon {
@@ -524,6 +536,63 @@ hr {
     justify-content: space-between;
     align-items: center;
     font-size: 1.3rem;
+}
+
+
+#toastBox {
+    position: absolute;
+    top: 10px;
+    z-index: 20;
+    right: 20px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 0px 20px;
+    gap: 15px;
+}
+
+.toast {
+    width: 300px;
+    padding: 15px 0px 15px 10px;
+    background: #fff;
+    font-weight: 500;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transition: 300ms;
+    animation: to-left 500ms linear;
+}
+
+.toast i {
+    font-size: 30px;
+}
+.toast::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation:  anim 5s linear;
+}
+.toast.error::after{
+    background: red;
+}
+.toast.invalid::after{
+    background: orange;
+}
+@keyframes anim {
+    100%{
+        width: 0;
+    }
+    
 }
 
 @media (width<= 985px) {
